# se-toolkit-lab-8

./: README.md  REPORT.md  docker-compose.yml  pyproject.toml
.agents/skills/fix-file/: SKILL.md
.agents/skills/review-file/: SKILL.md
.qwen/: settings.json  settings.json.orig
caddy/: Caddyfile
lab/tasks/required/: task-1.md  task-2.md  task-3.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
wiki/: programming-language.md  ssh.md  vs-code.md
